--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-    <title>/anime</title>
+    <title>anime</title>
     <meta charset = "UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
@@ -34,7 +34,7 @@
 <body>
     <div class="wrapper"><canvas id="canvas"></canvas></div>
         <div id="content">
-        <b><a href="/" id="root">noyuno.space</a> / anime</b> 
+            <b><a href="/">anime</a>.<a href="//noyuno.space" id="root">noyuno.space</a></b> 
             <input type="text" id="search" placeholder="フィルタ" onkeyup="search();
 "></input>
             <div id="next"></div>
