--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
             font-size:17px;
         }
         table {
-            white-space: nowrap;
+            white-jp: nowrap;
             table-layout: auto 
         }
 
@@ -34,7 +34,7 @@
 <body>
     <div class="wrapper"><canvas id="canvas"></canvas></div>
         <div id="content">
-            <b><a href="/">anime</a>.<a href="//noyuno.space" id="root">noyuno.space</a></b> 
+            <b><a href="/">anime</a>.<a href="//noyuno.jp" id="root">noyuno.jp</a></b> 
             <input type="text" id="search" placeholder="フィルタ" onkeyup="search();
 "></input>
             <div id="next"></div>
